fix main-header z-index

--- a/app/assets/stylesheets/main-header.styl
+++ b/app/assets/stylesheets/main-header.styl
@@ -16,8 +16,8 @@
   border: 0 solid rgba(FOREGROUND, 0.5)
   border-bottom-width: 1px
   border-right-width: 1px
-  z-index 10
-  
+  z-index 100
+
   &:empty
     flex: 1
 
@@ -41,7 +41,7 @@
   border-right: 1px solid rgba(FOREGROUND, 1.0)
   // &:not(:last-child)
   //   border-right: 1px solid rgba(FOREGROUND, 0.85)
-    
+
   &:hover
     background: rgba(MEDIUM_GRAY, 0.5)
 
@@ -53,8 +53,8 @@
 
   > a
     color: inherit
-    text-decoration: none    
-    
+    text-decoration: none
+
 a.main-header-item
   box-shadow: 0 0 0 inset
   transition: box-shadow 0.2s
